fixed spacing issues for mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -30,7 +30,6 @@ body {
   padding: 50px 10px 10px 10px;
   flex-direction: row;
   justify-content: space-between;
-  /* flex-wrap: wrap; */
 }
 
 .header-icon {
@@ -38,7 +37,6 @@ body {
 }
 
 .header-icon img {
-  /* position: relative; */
   max-width: 30px;
   max-height: 30px;
   display: block;
@@ -55,11 +53,17 @@ h1 {
 input {
   font-family: Quicksand, sans-serif;
   border-radius: 16px 16px 0px 0px;
-  width: 500px;
+  max-width: 500px;
+  width: 100vw;
   padding: 10px;
   border: none;
   outline: none;
   border-bottom: 3px solid #ff9800;
+}
+
+.location {
+  padding: 10px;
+  font-weight: 400;
 }
 
 .loading {
@@ -70,14 +74,12 @@ input {
 .main {
   display: flex;
   flex-direction: column;
-  /* flex-wrap: wrap; */
-  /* justify-content: center; */
   align-items: center;
-  /* text-align: center; */
 }
 
 .general-info {
-  width: 540px;
+  max-width: 540px;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -110,6 +112,7 @@ input {
   max-height: 60px;
   border: none;
   outline: none;
+  font-family: Quicksand, sans-serif;
   font-weight: 600;
   padding: 10px;
   margin: 10px;
@@ -127,16 +130,19 @@ button:hover {
   align-self: center;
   display: inline-grid;
   max-width: 540px;
+  width: 100%;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
   gap: 10px 10px;
   margin: 0px 0px 10px 0px;
 }
 
 .weather-pic {
-  grid-row: 1 / 2;
-  grid-column: 1 / 2;
+  /* grid-row: 1 / 2;
+  grid-column: 1 / 2; */
   align-self: center;
-  padding: 5px;
+  padding: 10px;
+  margin: 10px;
 }
 
 /* .weather-icon {
@@ -148,8 +154,8 @@ button:hover {
 } */
 
 .temp-container {
-  grid-row: 1 / 2;
-  grid-column: 2 / 3;
+  /* grid-row: 1 / 2;
+  grid-column: 2 / 3; */
   align-self: center;
 }
 
@@ -158,33 +164,10 @@ button:hover {
   grid-column: 1 / 3;
 } */
 
-/* .sunrise-container {
-  display: inline-grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 5px;
-} */
-
-/* .icon {
-  position: relative;
-  margin: 0px 5px 3px 5px;
-  max-width: 40px;
-  max-height: 40px;
-  align-self: center;
-  justify-self: center;
-} */
-
 p {
   padding: 5px;
   font-size: 18px;
 }
-
-/* .sunrise-content {
-  position: relative;
-  justify-content: start;
-  align-self: end;
-  margin: 0px 5px;
-} */
 
 .daily-icon {
   height: 100%;
@@ -218,7 +201,6 @@ p {
   align-content: center;
   border: 1px solid rgb(0, 150, 255);
   border-radius: 10px;
-  /* background-color: rgb(255, 152, 0, 0.1); */
   background-color: rgba(255, 255, 255, 0.4);
 }
 
@@ -233,15 +215,65 @@ h5 {
   color: rgb(0, 150, 255);
 }
 
-@media (max-width: 640px) {
-  .title {
-    padding: 15px 0;
+@media (max-width: 568px) {
+  input {
+    width: 80vw;
+  }
+
+  .toggle {
+    font-size: 14px;
+  }
+
+  .weather-container {
+    max-width: 500px;
+    gap: 5px 5px;
+    margin: 5px;
+  }
+
+  .temp {
+    font-size: 3.5em;
+  }
+}
+
+@media (max-width: 320px) {
+  .general-info {
+    max-width: 320px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  input {
+    width: 270px;
+  }
+
+  h1 {
     font-size: 1.75em;
   }
-  .weather-container {
-    flex-wrap: wrap;
+
+  h3 {
+    font-size: 0.97em;
   }
-  .location {
-    font-size: 1em;
+
+  .date-time {
+    font-size: 20px;
+  }
+
+  .weather-type {
+    font-size: 20px;
+  }
+
+  .toggle {
+    font-size: 12px;
+  }
+
+  .weather-container {
+    max-width: 320px;
+    gap: 5px 5px;
+    margin: 5px;
+  }
+
+  .temp {
+    font-size: 3em;
   }
 }
